# e_lib

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
include/: e_lib.h  e_string.h  e_string_utf8.h
src/: CMakeLists.txt  e_lib.c
src/e_string/: CMakeLists.txt  e_string_from.c  e_string_utf8.c  e_string_validate.c
test/: CMakeLists.txt  e_lib_add9_test.c
test/e_string/: CMakeLists.txt  e_string_validate_buffer_test.c  e_string_validate_test.c
